# phenotype-gfx

./: .ci-retry  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STATUS.md  Taskfile.yml  UPSTREAM.md  VERSION.toml  deny.toml  justfile  phenotype-terrain.csproj  phenotype-water.csproj  phenotype-water.slnx
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dotnet-build.yml  dotnet-test.yml  release.yml
_stub/: Color.cs  Vector2.cs  Vector3.cs
benches/: mesher_compare.rs  perf_suite.rs  post_stack_bench.rs  voxelizer_bench.rs
bindings/: c_api.rs
crates/phenotype-voxel/: Cargo.toml
crates/phenotype-voxel/src/: lib.rs
csharp/: phenotype-gfx-csharp.csproj
docs/: THREAT_MODEL.md
docs/adr/: 0001-single-core-thin-ffi.md  ADR-002-postfx-merge-structure.md  ADR-003-crate-scaffold.md  ADR-003-monorepo-architecture.md  ADR-004-single-core-ffi-edges.md
docs/disposition/: w18b-fleet-manifest.md
docs/requirements/: phenotype-voxel-frnfr.md
docs/specs/: per-os-icons.md
examples/: consume_mesh.rs
findings/: 2026-06-16-terrain-block-c.md  2026-06-16-voxel-block-c.md  2026-06-16-water-block-c.md  2026-06-18-postfx-block-c.md  2026-06-18-sister-repo-block-c-summary.md  71-pillar-2026-06-18-delta.md  71-pillar-2026-06-18-summary.md  71-pillar-2026-06-18.md
just/: phenotype.just
phenotype-gfx/: Cargo.toml
phenotype-gfx/docs/adr/: 0001-single-core-thin-ffi.md
phenotype-gfx/src/: lib.rs  lod.rs  postfx.rs  streaming.rs  voxel.rs  voxelizer.rs  water.rs
phenotype-gfx/src/voxel/: mod.rs
rust/: Cargo.toml
rust/phenotype-gfx-voxel/: Cargo.toml
rust/phenotype-gfx-voxel/src/: lib.rs  streaming.rs  voxel.rs
rust/voxel/: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml  sonar-project.properties
rust/voxel/.github/: dependabot.yml
rust/voxel/benches/: mesher_compare.rs  perf_suite.rs  voxelizer_bench.rs
rust/voxel/coverage/: SUMMARY.md  lcov.info
rust/voxel/src/: chunk.rs  cubic_mesher.rs  fixtures.rs  lib.rs  lod.rs  mesh.rs  shape_hints.rs  world.rs
scripts/: generate-unity-stub.sh
spec/: interop.md
src/: ChunkMeshBuilder.cs  FluidMesh.cs  GerstnerWaveBank.cs  HeightField.cs  TerrainLod.cs  UnityEngineStubs.cs  WaterLod.cs  bevy_adapter.rs  coord.rs  cubic_mesher.rs  delta.rs  greedy_mesher.rs  lib.rs  lod.rs  material.rs  mesh.rs  obs.rs  octree.rs  postfx.rs  serial.rs  shape_hints.rs  sprite_voxelizer.rs  streaming.rs  voxel.rs  voxelizer.rs  water.rs  world.rs
src/Rendering/: FluidMesh.cs  WaterLod.cs  WaterMaterial.cs  WaterRenderer.cs  WaterShader.cs
src/adapters/: chunk.rs  mesh.rs  mod.rs  renderer.rs  storage.rs
src/lod/: mod.rs
src/ports/: material.rs  mod.rs  octree.rs  storage.rs
src/postfx/: bloom_pass.rs  error.rs  mod.rs  post_fx_pass_registry.rs  post_stack.rs  rendering.rs  shaders.rs  ssao_pass.rs
src/postfx/ports/: lut_pipeline.rs  material_registry.rs  mod.rs  post_fx_pass.rs  serialization.rs  shader_availability.rs  urp_render_graph.rs
src/streaming/: mod.rs
src/terrain/: chunk_mesh_builder.rs  error.rs  height_field.rs  lod.rs  materials.rs  mod.rs  terrain_lod.rs
src/terrain/ports/: material_registry.rs  mod.rs  (+1 more)
src/voxel/: bevy_adapter.rs  coord.rs  cubic_mesher.rs  delta.rs  fixtures.rs  greedy_mesher.rs  lod.rs  material_pbr.rs  mesh.rs  mod.rs  octree.rs  serial.rs  sprite_voxelizer.rs  world.rs
src/voxelizer/: mod.rs
src/water/: error.rs  gerstner_wave_bank.rs  lod_base.rs  mod.rs
tests/: ChunkMeshBuilderTests.cs  FluidMeshStressTests.cs  FluidMeshTests.cs  GerstnerWaveBankTests.cs  HeightFieldTests.cs  LodBaseTests.cs  WaterLodTests.cs  WaterRendererTests.cs  mesher_triangle_regression.rs  perf_regression_guards.rs  phenotype-terrain.tests.csproj  phenotype-water.tests.csproj
ts/: README.md  package.json
unity/postfx/: audit_scorecard.json
unity/postfx-shaders/: README.md
unity/terrain/: SHIM_README.md  Taskfile.yml
unity/water/: README.md  SHIM_README.md  Taskfile.yml  phenotype-water.csproj
(+52 files in other folders)
