[package]
name = "phenotype-gfx"
version = "0.1.0"
edition = "2021"
description = "Unified graphics kernel: voxel, LOD, streaming, postfx, water, voxelizer"

[workspace]

[lib]
name = "phenotype_gfx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Shared voxel kernel — provides ChunkCoord, ChunkId, LodLevel, LodPolicy,
# MaterialId, VoxelScaleMultiplier, select_lod. Kept in-tree so the standalone
# phenotype-voxel repo can be retired after consumers migrate to phenotype-gfx.
phenotype-voxel = { path = "rust/voxel" }
