[package]
name = "phenotype-gfx"
version = "0.2.0"
edition = "2021"
description = "Unified graphics kernel: voxel, LOD, streaming, postfx, water, voxelizer, terrain. Single Rust core per ADR-004."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/KooshaPari/phenotype-gfx"
keywords = ["graphics", "voxel", "terrain", "water", "postfx"]
categories = ["game-engines", "graphics", "data-structures"]

[workspace]

[lib]
name = "phenotype_gfx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# L5-109 (2026-06-18): voxel crate inlined into src/voxel/ — drop git dep, add direct deps.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1"
thiserror = "2"
# glam 0.29 for water/postfx math; 0.18+ broke Vec3 ABI relative to 0.27
glam = { version = "0.29", features = ["serde"] }
# L5-110 terrain uses UUID v4 ids for material registry keys.
uuid = { version = "1", features = ["v4", "serde"] }

# Bevy adapter is optional — only pulled in when consumers need ECS integration
bevy = { version = "0.18.1", default-features = false, features = ["bevy_asset", "bevy_mesh"], optional = true }

# L5-110..112: ported C# terrain/water/postfx into Rust; criterion benches
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "voxelizer_bench"
harness = false

[[bench]]
name = "mesher_compare"
harness = false

[[bench]]
name = "perf_suite"
harness = false

[[bench]]
name = "post_stack_bench"
harness = false

[[example]]
name = "consume_mesh"
path = "examples/consume_mesh.rs"

[features]
default = []
bevy = ["dep:bevy"]
# Enable criterion-backed benches in `cargo bench --features bench`
bench = ["dep:criterion"]
