[package]
name = "phenotype-gfx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single-core graphics substrate: voxel meshing, LOD, streaming, postfx, water, voxelizer"
repository = "https://github.com/KooshaPari/phenotype-gfx"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Phenotype-org shared voxel kernel — provides ChunkId, LodLevel, LodPolicy,
# VoxelScaleMultiplier, MaterialId, ChunkCoord, select_lod.
phenotype-voxel = { git = "https://github.com/KooshaPari/phenotype-voxel.git", rev = "0bbd1b7c64e64e7723c42a7417680c23860dfb5a" }
